--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,8 +6,8 @@
     
   </head>
   <body>
-    <div id="app"></div>
-    <script src="js/compiled/app.js"></script>
-    <script>essentials_frontend_re_frame.core.init();</script>
+    <div id="elf-app"></div>
+    <script src="js/compiled/elf.js"></script>
+    <script>elf.core.init();</script>
   </body>
 </html>
