--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     
-    <link rel="stylesheet" href="//www.knoll.com/static_resources/css/fast.fonts.async.css" type="text/css">
+    <!-- <link rel="stylesheet" href="//www.knoll.com/static_resources/css/fast.fonts.async.css" type="text/css"> -->
     <link href="https://www.knoll.com/css/fonts/font.css" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/style.css?v=20181109" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/style3.css" type="text/css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <link href="https://www.knoll.com/css/exchange.css?v=20180703" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/stickyheaders.css" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/dealer.css" type="text/css" rel="stylesheet">
-    <link href="https://www.knoll.com/css/print.css?v=20180910" type="text/css" rel="stylesheet">
+    <!-- <link href="https://www.knoll.com/css/print.css?v=20180910" type="text/css" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="css/essentials.css">
 
   </head>
