Updated essentials.css and restored fast.fonts.async.css include.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     
-    <!-- <link rel="stylesheet" href="//www.knoll.com/static_resources/css/fast.fonts.async.css" type="text/css"> -->
+    <link rel="stylesheet" href="//www.knoll.com/static_resources/css/fast.fonts.async.css" type="text/css">
     <link href="https://www.knoll.com/css/fonts/font.css" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/style.css?v=20181109" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/style3.css" type="text/css" rel="stylesheet">
