--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -29,8 +29,18 @@
 
   </head>
   <body>
+	<script type="text/javascript" src="https://www.knoll.com/js/jquery/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="https://www.knoll.com/js/jquery.magnific-popup.min.js"></script>
+
     <div id="elf-app"></div>
     <script src="js/compiled/elf.js"></script>
     <script>elf.core.init();</script>
+	<script>
+	  /*
+	  $(".popup-modal").magnificPopup({
+	  showCloseBtn: false
+	  });
+	  */
+	</script>
   </body>
 </html>
