Update to Clojurescript 1.10.516, reworked filtered-products-view to register the Magnific Popup every time this component is mounted or updated. Removed m_CS_img_loaded class from all img elements since that is dynamically added by the mCustomScrollbar code.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     
-    <link rel="stylesheet" href="//www.knoll.com/static_resources/css/fast.fonts.async.css" type="text/css">
+    <link rel="stylesheet" href="https://www.knoll.com/static_resources/css/fast.fonts.async.css" type="text/css">
     <link href="https://www.knoll.com/css/fonts/font.css" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/style.css?v=20181109" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/style3.css" type="text/css" rel="stylesheet">
@@ -33,8 +33,8 @@
   <body>
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery.magnific-popup.min.js"></script>
-	<script type="text/javascript" src="/js/jquery.mCustomScrollbar.min.js"></script>
-	<script type="text/javascript" src="/js/jquery.mousewheel.min.js"></script>
+	<script type="text/javascript" src="js/jquery.mCustomScrollbar.min.js"></script>
+	<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 
     <div id="elf-app"></div>
     <script src="js/compiled/elf.js"></script>
