Got rid of mCustomScrollbar for now - it was breaking the popup.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -27,14 +27,13 @@
     <!-- <link href="https://www.knoll.com/css/print.css?v=20180910" type="text/css" rel="stylesheet"> -->
 
     <link rel="stylesheet" type="text/css" href="css/essentials.css">
-    <!-- <link rel="stylesheet" type="text/css" href="css/seating.css"> -->
-	<link rel="stylesheet" type="text/css" href="css/jquery.mCustomScrollbar.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/jquery.mCustomScrollbar.css"> -->
 
   </head>
   <body>
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery.magnific-popup.min.js"></script>
-	<script type="text/javascript" src="js/jquery.mCustomScrollbar.min.js"></script>
+	<!-- <script type="text/javascript" src="js/jquery.mCustomScrollbar.min.js"></script> -->
 	<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 	<script type="text/javascript" src="https://www.knoll.com/mjs/owl.carousel.min.js"></script>
 
