SITEWORK-257: css changes

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -42,7 +42,7 @@
     <script>elf.core.init();</script>
 	<script>
 	  $(document).ready(function() {
-		  
+		  $("body").addClass("essentials-page");
 	  });
 	</script>
   </body>
