SITEWORK-257: changes for search box (autocomplete, scroll to product)

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -32,8 +32,8 @@
   </head>
   <body>
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery/jquery-1.11.0.min.js"></script>
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.min.css">
-    <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.min.css">
+    <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery.magnific-popup.min.js"></script>
 
