--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -32,12 +32,19 @@
   </head>
   <body>
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery/jquery-1.11.0.min.js"></script>
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.min.css">
-    <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
+
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.core.js"></script>
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.widget.js"></script>
+	<script type="text/javascript" src="https://knlprdwcsmgt.knoll.com/js/jquery/jquery.ui.autocomplete.js"></script>
+
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.mouse.min.js"></script>
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.position.min.js"></script>
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.draggable.min.js"></script>
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.resizable.min.js"></script>
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.button.min.js"></script>
+	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.dialog.min.js"></script>
 
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery.magnific-popup.min.js"></script>
-
-	<!-- <script type="text/javascript" src="js/jquery.mCustomScrollbar.min.js"></script> -->
 
 	<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 	<script type="text/javascript" src="https://www.knoll.com/mjs/owl.carousel.min.js"></script>
