SITEWORK-257: switched to using the minified version of autocomplete.js

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,10 +24,8 @@
     <link href="https://www.knoll.com/css/exchange.css?v=20180703" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/stickyheaders.css" type="text/css" rel="stylesheet">
     <link href="https://www.knoll.com/css/dealer.css" type="text/css" rel="stylesheet">
-    <!-- <link href="https://www.knoll.com/css/print.css?v=20180910" type="text/css" rel="stylesheet"> -->
 
     <link rel="stylesheet" type="text/css" href="css/essentials.css">
-	<!-- <link rel="stylesheet" type="text/css" href="css/jquery.mCustomScrollbar.css"> -->
 
   </head>
   <body>
@@ -35,7 +33,7 @@
 
 	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.core.js"></script>
 	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.widget.js"></script>
-	<script type="text/javascript" src="https://knlprdwcsmgt.knoll.com/js/jquery/jquery.ui.autocomplete.js"></script>
+	<script type="text/javascript" src="https://knlprdwcsmgt.knoll.com/js/jquery/jquery.ui.autocomplete.min.js"></script>
 
 	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.mouse.min.js"></script>
 	<script type="text/javascript" src="//www.knoll.com/js/jquery/jquery.ui.position.min.js"></script>
