--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -45,7 +45,7 @@
 	<script type="text/javascript" src="https://www.knoll.com/js/jquery.magnific-popup.min.js"></script>
 
 	<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
-	<script type="text/javascript" src="https://www.knoll.com/mjs/owl.carousel.min.js"></script>
+	<!-- <script type="text/javascript" src="https://www.knoll.com/mjs/owl.carousel.min.js"></script> -->
 
     <div id="elf-app"></div>
     <script src="js/compiled/elf.js"></script>
