--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -47,6 +47,9 @@
 	<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 	<!-- <script type="text/javascript" src="https://www.knoll.com/mjs/owl.carousel.min.js"></script> -->
 
+	<div id="clicker1"></div>
+	<div id="clicker2"></div>
+	
     <div id="elf-app"></div>
     <script src="js/compiled/elf.js"></script>
     <script>elf.core.init();</script>
